--- a/custom_components/pca9685/manifest.json
+++ b/custom_components/pca9685/manifest.json
@@ -8,8 +8,8 @@
     "iot_class": "local_push",
     "issue_tracker": "https://github.com/antonverburg/ha-pca9685/issues",
     "requirements": [
-        "pwmled-ant==1.6.16",
+        "pwmled==1.6.11",
 	"RPi.GPIO"
     ],
-    "version": "0.9.1"
+    "version": "0.9.2"
 }
